add and improves images of white tea

--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
                             </p>
                             <div class="block lg:hidden col-span-2 row-span-2">
                                 <img 
-                                  src="/assets/images/white-tea-sample.jpeg" 
-                                  alt="White Tea" 
+                                  src="/assets/images/white-tea-tropicafarm-1.webp" 
+                                  alt="White Tea Premium, Tropicafarm, Indonesia" 
                                   class="rounded-xl shadow-lg w-full md:w-1/2 md:mx-auto h-auto object-cover" 
                                   loading="lazy"
                                 >
@@ -746,7 +746,7 @@
                         <!-- Images -->
                         <div class="hidden lg:grid lg:w-1/2 grid-cols-2 lg:grid-cols-4 lg:grid-rows-2 gap-4">
                             <div class="col-span-2 row-span-2">
-                                <img src="/assets/images/white-tea-sample.jpeg" alt="Specialty Tea Main" class="rounded-xl shadow-lg w-full h-full object-cover" loading="lazy">
+                                <img src="/assets/images/white-tea-tropicafarm-1.webp" alt="White Tea Premium, Tropicafarm, Indonesia" class="rounded-xl shadow-lg w-full h-full object-cover" loading="lazy">
                             </div>
                             <img src="/assets/images/specialty-tea-white-peony.jpg" alt="Specialty Tea Closeup" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
                             <img src="/assets/images/specialty-tea-jasmine.jpg" alt="Specialty Tea Leaves" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
