--- a/products/tea.html
+++ b/products/tea.html
@@ -564,7 +564,7 @@
                                 </div>
                                 <div class="relative">
                                     <div class="h-40 relative overflow-hidden">
-                                        <img src="/assets/images/white-tea-sample-thumbnail.jpeg" alt="White Tea Premium" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                        <img src="/assets/images/white-tea-tropicafarm-1-thumb.jpg" alt="White Tea Premium" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                                     </div>
                                     <div class="p-4">
                                         <h5 class="font-bold text-primary text-lg mb-1">White Tea</h5>
