--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -360,14 +360,15 @@
                     <div class="space-y-4">
                         <!-- Main Image -->
                         <div class="main-image">
-                            <img id="mainImage" src="/assets/images/white-tea-sample.jpeg" alt="Premium White Tea" class="w-full h-96 object-cover rounded-2xl shadow-lg">
+                            <img id="mainImage" src="/assets/images/white-tea-tropicafarm-1.webp" alt="Premium White Tea" class="w-full h-96 object-cover rounded-2xl shadow-lg">
                         </div>
                         
                         <!-- Thumbnails -->
                         <div class="thumbnails-container">
-                            <img src="/assets/images/white-tea-sample-thumbnail.jpeg" alt="White Tea Close-up" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-sample.jpeg')">
-                            <!-- <img src="/assets/images/specialty-tea-white-tea.jpg" alt="White Tea Leaves" class="thumbnail active object-cover rounded-lg" onclick="changeMainImage(this.src)"> -->
-                            <!-- <img src="/assets/images/tea-brewed.jpg" alt="Brewed White Tea" class="thumbnail object-cover rounded-lg" onclick="changeMainImage(this.src)"> -->
+                            <img src="/assets/images/white-tea-tropicafarm-1-thumb.jpg" alt="Premium White Tea Buds from Tropicafarm, Indonesia" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-tropicafarm-1.webp')">
+                            <img src="/assets/images/white-tea-tropicafarm-2-thumb.jpg" alt="Close-up of White Tea leaves showing natural white tips" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-tropicafarm-2.webp')">
+                            <img src="/assets/images/white-tea-tropicafarm-3-thumb.jpg" alt="Tropicafarm White Tea in export ready packaging" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-tropicafarm-3.webp')">
+                            <img src="/assets/images/white-tea-tropicafarm-thumb.jpg" alt="Tropicafarm White Tea in jar" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-tropicafarm.webp')">
                         </div>
                     </div>
                 </div>
