fix header menu

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -389,7 +389,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="../index.html" class="text-gray-700 hover:text-primary text-lg font-bold transition-colors">Home</a>
                     <a href="../index.html#journey" class="text-gray-700 hover:text-primary text-lg font-bold transition-colors">About Us</a>
-                    <a href="#" class="text-primary text-lg font-bold border-b-2 border-primary pb-1">Products</a>
+                    <a href="../products/tea.html" class="text-primary text-lg font-bold border-b-2 border-primary pb-1">Products</a>
                 </div>
 
                 <!-- Chat Button -->
