optimize white tea PDP

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -25,25 +25,26 @@
     <meta name="theme-color" content="#2c7744">
 
     <!-- Primary Meta Tags -->
-    <title>Premium White Tea Indonesia | Wholesale Export | TropicaFarm</title>
-    <meta name="description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated, high antioxidants. Wholesale export for international buyers. Request samples now.">
-    <meta name="keywords" content="white tea indonesia, premium white tea wholesale, indonesian white tea export, west java white tea, wholesale tea supplier, bulk white tea">
+    <title>Premium White Tea Indonesia | Wholesale Export Supplier | TropicaFarm</title>
+    <meta name="description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated processing, high antioxidants. Wholesale export for international buyers. Lab-tested, certified quality. Request samples now.">
+    <meta name="keywords" content="white tea indonesia, premium white tea wholesale, indonesian white tea export, west java white tea, wholesale tea supplier, bulk white tea, organic white tea, high antioxidant tea">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="language" content="en">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="product">
-    <meta property="og:title" content="Premium White Tea Indonesia | Wholesale Export">
-    <meta property="og:description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated, high antioxidants.">
-    <meta property="og:image" content="https://tropicafarm.com/assets/images/specialty-tea-white-tea.jpg">
+    <meta property="og:title" content="Premium White Tea Indonesia | Wholesale Export Supplier">
+    <meta property="og:description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated processing, high antioxidants. Lab-tested, certified quality.">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/white-tea-tropicafarm-1.webp">
     <meta property="og:url" content="https://tropicafarm.com/products/white-tea.html">
     <meta property="og:site_name" content="TropicaFarm">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Premium White Tea Indonesia | Wholesale Export">
-    <meta name="twitter:description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated, high antioxidants.">
-    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/specialty-tea-white-tea.jpg">
+    <meta name="twitter:title" content="Premium White Tea Indonesia | Wholesale Export Supplier">
+    <meta name="twitter:description" content="Premium Indonesian White Tea from West Java highlands. Hand-picked young buds, oven-dehydrated processing, high antioxidants. Lab-tested, certified quality.">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/white-tea-tropicafarm-1.webp">
 
     <link rel="canonical" href="https://tropicafarm.com/products/white-tea.html">
 
@@ -463,7 +464,7 @@
 
                     <!-- Key Features -->
                     <div class="mb-8">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-4">What Makes This Tea Special</h3>
+                        <h2 class="text-xl font-semibold text-gray-900 mb-4">What Makes This Tea Special</h2>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
@@ -512,7 +513,7 @@
 
                     <!-- Quick Specs -->
                     <div class="bg-gray-50 rounded-xl p-6">
-                        <h3 class="text-lg font-semibold text-gray-900 mb-4">Quick Specifications</h3>
+                        <h2 class="text-lg font-semibold text-gray-900 mb-4">Quick Specifications</h2>
                         <div class="grid grid-cols-2 gap-4 text-sm">
                             <!-- <div>
                                 <span class="text-gray-600">Origin:</span>
@@ -550,7 +551,7 @@
     </section>
 
     <!-- Health Benefits & Quality Assurance -->
-    <section class="py-12 bg-gray-50">
+    <section class="py-12 bg-gray-50" itemscope itemtype="https://schema.org/Product">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 <!-- Health Benefits -->
@@ -917,19 +918,32 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Premium White Tea Indonesia",
-      "description": "Delicately hand-picked young tea buds from the highlands of West Java. Our White Tea offers a smooth, floral profile with natural sweetness, high in antioxidants.",
+      "description": "Delicately hand-picked young tea buds from the highlands of West Java. Our White Tea offers a smooth, floral profile with natural sweetness, high in antioxidants and processed with oven-dehydrator to preserve maximum nutrition.",
       "brand": {
         "@type": "Brand",
         "name": "TropicaFarm"
       },
       "category": "White Tea",
+      "image": [
+        "https://tropicafarm.com/assets/images/white-tea-tropicafarm-1.webp",
+        "https://tropicafarm.com/assets/images/white-tea-tropicafarm-2.webp",
+        "https://tropicafarm.com/assets/images/white-tea-tropicafarm-3.webp"
+      ],
       "offers": {
         "@type": "Offer",
         "availability": "https://schema.org/InStock",
+        "priceSpecification": {
+            "@type": "PriceSpecification",
+            "price": "0",
+            "priceCurrency": "USD"
+        },
+        "description": "Contact for wholesale pricing"
         "seller": {
           "@type": "Organization",
-          "name": "TropicaFarm"
-        }
+          "name": "TropicaFarm",
+          "url": "https://tropicafarm.com"
+        },
+        "url": "https://tropicafarm.com/products/white-tea.html"
       },
       "aggregateRating": {
         "@type": "AggregateRating",
@@ -937,6 +951,79 @@
         "bestRating": "5",
         "worstRating": "1",
         "ratingCount": "127"
+      },
+      "additionalProperty": [
+        {
+          "@type": "PropertyValue",
+          "name": "Origin",
+          "value": "West Java, Indonesia"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Processing Method",
+          "value": "Oven-dehydrated"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Antioxidant Content",
+          "value": "High"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Certification",
+          "value": "Halal, HACCP"
+        }
+      ]
+    }
+    </script>
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://tropicafarm.com"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Tea Products",
+          "item": "https://tropicafarm.com/products/tea.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "White Tea",
+          "item": "https://tropicafarm.com/products/white-tea.html"
+        }
+      ]
+    }
+    </script>
+
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "TropicaFarm",
+      "url": "https://tropicafarm.com",
+      "logo": "https://tropicafarm.com/assets/images/tropicafarm-logo.png",
+      "description": "Premium Indonesian tea supplier specializing in wholesale export of high-quality white tea, green tea, and specialty teas from West Java highlands.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "ID",
+        "addressRegion": "West Java"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "telephone": "+62-822-4663-2200",
+        "availableLanguage": "English"
       }
     }
     </script>
