swap jasmine and OP

--- a/products/tea.html
+++ b/products/tea.html
@@ -341,21 +341,29 @@
                             </div>
                         </div>
 
-                        <!-- OP (Orange Pekoe) -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('OP (Orange Pekoe)', 'Whole tea leaves offering delicate flavor and lighter body.', '/assets/images/black-tea-op.jpg')">
-                            <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
-                                <i class="fas fa-search text-white text-sm"></i>
-                            </div>
-                            <div class="relative">
-                                <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/black-tea-op-thumbnail.jpg" alt="Black Tea OP - West Java tea exporter" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                        <!-- Jasmine -->
+                        <a href="/products/black-tea-jasmine.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute -top-0 -right-0 z-20">
+                                    <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
+                                        <i class="fas fa-star mr-1"></i>BEST SELLER
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h3 class="font-bold text-primary text-lg mb-1">OP (Orange Pekoe)</h3>
-                                    <p class="text-sm text-gray-600">Delicate & Whole Leaf</p>
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
+                                </div>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/specialty-tea-jasmine-thumbnail.jpg" alt="Loose Leaf Jasmine Tea - Indonesian tea wholesale" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h3 class="font-bold text-primary text-lg mb-1">Jasmine</h3>
+                                        <p class="text-sm text-amber-600 font-medium mb-1">Most Requested</p>
+                                        <p class="text-sm text-gray-600">Delicate Floral</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- BOP (Broken Orange Pekoe) - BEST SELLER -->
                         <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('BOP (Broken Orange Pekoe)', 'Strong, robust flavor ideal for breakfast blends. Our most popular black tea variant for wholesale buyers worldwide.', '/assets/images/black-tea-bop.jpg')">
@@ -373,7 +381,7 @@
                                 </div>
                                 <div class="p-4">
                                     <h3 class="font-bold text-primary text-lg mb-1">BOP (Broken Orange Pekoe)</h3>
-                                    <p class="text-sm text-amber-600 font-medium mb-1">Most Exported Worldwide</p>
+                                    <p class="text-sm text-amber-600 font-medium mb-1">Most Requested</p>
                                     <p class="text-sm text-gray-600">Strong & Robust Flavor</p>
                                 </div>
                             </div>
@@ -545,18 +553,18 @@
                             </div>
                         </div>
 
-                        <!-- Jasmine -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick='openVariantPopup("Jasmine", "Jasmine tea is scented with fresh jasmine blossoms, imparting a delicate floral aroma and flavor.", "/assets/images/specialty-tea-jasmine.jpg")'>
+                        <!-- OP (Orange Pekoe) -->
+                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('OP (Orange Pekoe)', 'Whole tea leaves offering delicate flavor and lighter body.', '/assets/images/black-tea-op.jpg')">
                             <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
                                 <i class="fas fa-search text-white text-sm"></i>
                             </div>
                             <div class="relative">
                                 <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/specialty-tea-jasmine-thumbnail.jpg" alt="Loose Leaf Jasmine Tea - Indonesian tea wholesale" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    <img src="/assets/images/black-tea-op-thumbnail.jpg" alt="Black Tea OP - West Java tea exporter" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                                 </div>
                                 <div class="p-4">
-                                    <h3 class="font-bold text-primary text-lg mb-1">Jasmine</h3>
-                                    <p class="text-sm text-gray-600">Delicate Floral</p>
+                                    <h3 class="font-bold text-primary text-lg mb-1">OP (Orange Pekoe)</h3>
+                                    <p class="text-sm text-gray-600">Delicate & Whole Leaf</p>
                                 </div>
                             </div>
                         </div>
