re-word hero landing page

--- a/index.html
+++ b/index.html
@@ -482,7 +482,9 @@
                         <span class="text-white">From Indonesia</span>
                     </h1>
                     <p class="sm:text-xl lg:text-xl text-gray-300 max-w-2xl">
-                        Welcome to TropicaFarm, your direct source for exceptional Indonesian teas! As a West Java-based supplier, we're dedicated to bringing the finest black, green, and loose leaf teas from Indonesian farmers directly to the international market.
+                        Welcome to TropicaFarm, your direct source
+for exceptional Indonesian tea! We are dedicated to bringing the finest black, green, and loose leaf teas from Indonesian farmers to the international market, ensuring affordable and reliable sourcing
+for your business
                     </p>
                 </div>
                 
