--- a/products/tea.html
+++ b/products/tea.html
@@ -345,7 +345,7 @@
                         <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('BOP (Broken Orange Pekoe)', 'Strong, robust flavor ideal for breakfast blends. Our most popular black tea variant for wholesale buyers worldwide.', '/assets/images/black-tea-bop.jpg')">
                             <div class="absolute -top-0 -right-0 z-20">
                                 <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                    <i class="fas fa-star mr-1"></i>BEST SELLER
+                                    <i class="fas fa-star mr-1"></i>MOST REQUESTED
                                 </div>
                             </div>
                             <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
@@ -435,7 +435,7 @@
                             <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300">
                                 <div class="absolute -top-0 -right-0 z-20">
                                     <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                        <i class="fas fa-star mr-1"></i>BEST SELLER
+                                        <i class="fas fa-star mr-1"></i>MOST REQUESTED
                                     </div>
                                 </div>
                                 <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
@@ -455,10 +455,10 @@
                         </a>
 
                         <!-- Gun Powder -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('Gun Powder', 'Gunpowder tea consists of green tea leaves rolled into small pellets, resembling gunpowder grains, yielding a bold, slightly smoky flavor.', '/assets/images/green-tea-gun-powder.jpg')">
+                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300">
                             <div class="absolute -top-0 -right-0 z-20">
                                 <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                    <i class="fas fa-star mr-1"></i>BEST SELLER
+                                    <i class="fas fa-star mr-1"></i>MOST REQUESTED
                                 </div>
                             </div>
                             <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
@@ -470,26 +470,35 @@
                                 </div>
                                 <div class="p-4">
                                     <h3 class="font-bold text-primary text-lg mb-1">Gun Powder</h3>
+                                    <p class="text-sm text-amber-600 font-medium mb-1">Most Requested</p>
                                     <p class="text-sm text-gray-600">Bold & Smoky</p>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Fannings -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('Fannings', 'Fannings are small tea leaf particles left after higher grades are gathered, brewing quickly to produce a strong, flavorful cup.', '/assets/images/green-tea-fannings.jpg')">
-                            <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
-                                <i class="fas fa-search text-white text-sm"></i>
-                            </div>
-                            <div class="relative">
-                                <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/green-tea-fannings-thumbnail.jpg" alt="Green Tea Fannings - bulk tea supplier Indonesia" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                         <a href="/products/green-tea-fannings.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-green-500 hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute -top-0 -right-0 z-20">
+                                    <div class="bg-green-700 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
+                                        <i class="fas fa-star mr-1"></i>RECOMMENDED
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h3 class="font-bold text-primary text-lg mb-1">Fannings</h3>
-                                    <p class="text-sm text-gray-600">Quick Brewing & Strong</p>
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
+                                </div>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/green-tea-fannings-thumb.webp" alt="Green Tea Fannings - bulk tea supplier Indonesia" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h3 class="font-bold text-primary text-lg mb-1">Fannings</h3>
+                                        <p class="text-sm text-amber-600 font-medium mb-1">Recommended</p>
+                                        <p class="text-sm text-gray-600">Quick Brewing & Strong</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Pekoe Super -->
                         <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('Pekoe Super', 'Pekoe Super is a high-grade green tea with long, needle-like leaves, producing a bright green, flowery, and sweet infusion.', '/assets/images/green-tea-pekoe-super.jpg')">
