--- a/products/tea.html
+++ b/products/tea.html
@@ -455,26 +455,28 @@
                         </a>
 
                         <!-- Gun Powder -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300">
-                            <div class="absolute -top-0 -right-0 z-20">
-                                <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                    <i class="fas fa-star mr-1"></i>MOST REQUESTED
+                         <a href="/products/green-tea-gunpowder.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-400 hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute -top-0 -right-0 z-20">
+                                    <div class="bg-amber-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
+                                        <i class="fas fa-star mr-1"></i>MOST REQUESTED
+                                    </div>
+                                </div>
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
+                                </div>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/green-tea-gunpowder-thumb.webp" alt="Green Tea Gun Powder - West Java tea exporter" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h3 class="font-bold text-primary text-lg mb-1">Gun Powder</h3>
+                                        <p class="text-sm text-amber-600 font-medium mb-1">Most Requested</p>
+                                        <p class="text-sm text-gray-600">Bold & Smoky</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
-                                <i class="fas fa-search text-white text-sm"></i>
-                            </div>
-                            <div class="relative">
-                                <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/green-tea-gun-powder-thumbnail.jpg" alt="Green Tea Gun Powder - West Java tea exporter" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
-                                </div>
-                                <div class="p-4">
-                                    <h3 class="font-bold text-primary text-lg mb-1">Gun Powder</h3>
-                                    <p class="text-sm text-amber-600 font-medium mb-1">Most Requested</p>
-                                    <p class="text-sm text-gray-600">Bold & Smoky</p>
-                                </div>
-                            </div>
-                        </div>
+                        </a>
 
                         <!-- Fannings -->
                          <a href="/products/green-tea-fannings.html">
